<resources>
    <string name="app_name">workdate</string>
    <string name="icon_client">client</string>
    <string name="name">name</string>
    <string name="schedule">Schedule</string>
    <string name="clients">Clients</string>
    <string name="services">Services</string>
    <string name="releases">Releases</string>
    <string name="icon_service">service</string>
    <string name="value">value</string>
    <string name="phone">phone</string>
    <string name="title_form_new_client">New Client</string>
    <string name="title_form_new_service">New Service</string>
    <string name="description">description</string>
    <string name="positive_button_name">SAVE</string>
    <string name="negative_button_name">Cancel</string>
    <string name="saved">saved</string>
    <string name="title_form_update_client">Update Client</string>
    <string name="title_form_update_service">Update Service</string>
    <string name="address">address</string>
    <string name="address_icon">Address Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="n" translatable="false">N</string>
    <string name="d" translatable="false">D</string>
    <string name="clock">clock</string>
    <string name="hour">Hour</string>
    <string name="client">client</string>
    <string name="service">service</string>
    <string name="choose_client">Choose client</string>
    <string name="date">Date</string>
    <string name="observations">Observations</string>
    <string name="choose_service">Choose Service</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="date_format" translatable="false">00/00</string>
    <string name="hour_format" translatable="false">00:00</string>
    <string name="search">Search</string>
    <string name="remove">REMOVE</string>
    <string name="save">Save</string>
    <string name="resume">Resume</string>
    <string name="total">Total</string>
    <string name="zero_value">$ 0,00</string>
    <string name="c" translatable="false">c</string>
    <string name="paid">Paid</string>
    <string name="open">Open</string>
    <string name="filter">Filter</string>
    <string name="choose_filters">Choose Filters</string>
    <string name="test">test</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="schedules">Schedules</string>
    <string name="message_linked_schedule">this record is linked to a schedule</string>
    <string name="removed">removed</string>
    <string name="message_client_name_already_exists">this client name already exists</string>
    <string name="message_service_description_already_exists">this service description already exists</string>
    <string name="updated">updated</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pre_coin">$ </string>
    <string name="pos_coin" />
    <string name="message_schedule_updated">Schedule updated</string>
    <string name="message_schedule_saved">Schedule saved</string>
    <string name="message_empty_fields">Empty fields</string>
    <string name="to_locate">To locate</string>
    <string name="call">Call</string>
    <string name="conclude">Conclude</string>
    <string name="zero">0</string>
    <string name="concluded">Concluded</string>
    <string name="message_empty_address">No address found</string>
    <string name="message_empty_phone">No phone found</string>
    <string name="new_schedule">New schedule</string>
    <string name="arrow" translatable="false">arrow</string>
    <string name="month" translatable="false">January</string>
    <string name="addbutton" translatable="false">AddButton</string>

    <!-- tutorial texts  -->
    <string name="chosen_client">Chosen Client</string>
    <string name="chosen_client_message">This is the you choose client, ever will show here for verification</string>
    <string name="chosen_service">Chosen Service</string>
    <string name="chosen_service_message">This is the you choose service, ever will show here for verification</string>
    <string name="choosing_time">Choosing a time</string>
    <string name="choosing_time_message">Here you can inform the time you intend to carry out the service</string>
    <string name="choosing_date">Choosing a date</string>
    <string name="choosing_date_message">Here you can inform the date you intend to carry out the service</string>
    <string name="new_client_message">Here you can start registering new clients, they are the clients for the services you plan to schedule</string>
    <string name="find_clients">Find your clients</string>
    <string name="find_clients_message">After registering clients, clicking here is a great way to find them</string>
    <string name="new_service_message">Here you can start registering new services or services, the jobs you want to schedule for any client</string>
    <string name="find_services">Find your services</string>
    <string name="find_services_message">After registering services, clicking here is a great way to find them</string>
    <string name="new_schedule_message">Here you can start registering new schedules, to schedule the service you want to do</string>
    <string name="show_total">Here you can see the total</string>
    <string name="show_total_schedule_message">Indicates the sum of completed and unfinished schedules</string>
    <string name="tuto_filter">Filter</string>
    <string name="tuto_filter_schedule_message">After scheduling the services you want to do, here you can filter them, a great way to find your scheduled jobs</string>
    <string name="show_total_release_message">The sum of the financial entries generated by the schedules is announced, on this same screen it is possible to check the open entries also the paid ones</string>
    <string name="tuto_filter_release_message">After generating the financial entries created from the schedules, you can filter them, a great way to find your financial entries and the summary of values</string>
</resources>
