<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/form_schedule_client_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle_item_client"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/form_schedule_client_first_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/c"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/form_schedule_client_icon"
            app:layout_constraintEnd_toEndOf="@+id/form_schedule_client_icon"
            app:layout_constraintStart_toStartOf="@+id/form_schedule_client_icon"
            app:layout_constraintTop_toTopOf="@+id/form_schedule_client_icon" />

        <TextView
            android:id="@+id/form_schedule_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/client"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/form_schedule_client_icon"
            app:layout_constraintStart_toStartOf="@+id/form_schedule_client_icon"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_client_icon" />

        <TextView
            android:id="@+id/form_schedule_client_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/form_schedule_client_icon"
            app:layout_constraintStart_toStartOf="@+id/form_schedule_client_icon"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_client_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/form_schedule_service_cardView"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            android:foreground="@drawable/custom_ripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_client_phone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/service"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/form_schedule_service_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/form_schedule_service_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/zero_value"
                    android:textColor="@android:color/holo_green_dark"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/form_schedule_cardView"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_service_cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/schedule"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/date"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <Button
                    android:id="@+id/form_schedule_date_btn"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_shape_form_schedule_date_hour"
                    android:text="@string/date_format"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/hour"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView11" />

                <Button
                    android:id="@+id/form_schedule_hour_btn"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_shape_form_schedule_date_hour"
                    android:text="@string/hour_format"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView18"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/obsScheduleTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="6dp"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/form_schedule_date_btn"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_schedule_obs"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/observations"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Switch
            android:id="@+id/form_schedule_finished_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_cardView" />

        <Switch
            android:id="@+id/form_schedule_canceled_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/form_schedule_text_canceled_switch"
            app:layout_constraintTop_toTopOf="@+id/form_schedule_finished_switch" />

        <TextView
            android:id="@+id/form_schedule_text_finished_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/finished"
            app:layout_constraintBottom_toBottomOf="@+id/form_schedule_finished_switch"
            app:layout_constraintEnd_toStartOf="@+id/form_schedule_finished_switch"
            app:layout_constraintTop_toTopOf="@+id/form_schedule_finished_switch" />

        <TextView
            android:id="@+id/form_schedule_text_canceled_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/canceled"
            app:layout_constraintBottom_toBottomOf="@+id/form_schedule_canceled_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/form_schedule_canceled_switch" />

        <Button
            android:id="@+id/form_schedule_save_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttonshape_form_schedule_save"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_schedule_finished_switch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>