<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:foreground="@drawable/custom_ripple"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_service_subcard_constraint"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <View
            android:id="@+id/list_item_service_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle_item_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_service_first_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/d"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_service_icon"
            app:layout_constraintEnd_toEndOf="@+id/list_item_service_icon"
            app:layout_constraintStart_toStartOf="@+id/list_item_service_icon"
            app:layout_constraintTop_toTopOf="@+id/list_item_service_icon" />

        <TextView
            android:id="@+id/list_item_service_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textAllCaps="true"
            android:textColor="@color/coloBlackAbsolute"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/list_item_service_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/list_item_service_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/list_item_service_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/value"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/list_item_service_description"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/list_item_service_description"
            app:layout_constraintTop_toBottomOf="@+id/list_item_service_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>